--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cursor-scholar-ai-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>UnliLearn</title>
+    <meta name="description" content="Personalized Learning Platform" />
+    <meta name="author" content="UnliLearn" />
 
-    <meta property="og:title" content="cursor-scholar-ai-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="UnliLearn" />
+    <meta property="og:description" content="Personalized Learning Platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@UnliLearn" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
